bin_PROGRAMS = xo
xo_SOURCES = \
             insns.c \
             insns.def \
             insns.h \
             instruction.c \
             instruction.h \
             invocation.c \
             invocation.h \
             machine_state.c \
             machine_state.h \
             types.h \
             xo.c
