bin_PROGRAMS = xo
xo_SOURCES = \
             combinatorics.c \
             combinatorics.h \
             insns.c \
             insns.def \
             insns.h \
             instruction.c \
             instruction.h \
             invocation.c \
             invocation.h \
             machine_state.c \
             machine_state.h \
             program.c \
             program.h \
             types.h \
             xo.c \
             xo.h
