bin_PROGRAMS = xo
xo_SOURCES = \
             bdd_wrapper.cpp \
             bdd_wrapper.hpp \
             equivalence_checker_c.c \
             equivalence_checker_c.h \
             flag_set.c \
             flag_set.h \
             generator.c \
             generator.h \
             insns.c \
             insns.h \
             instruction.c \
             instruction.h \
             invocation.c \
             invocation.h \
             machine_state.c \
             machine_state.h \
             parser.c \
             parser.h \
             program.c \
             program.h \
             register_set.c \
             register_set.h \
             std.h \
             test_states.c \
             test_states.h \
             types.h \
             xo.c
