TESTS = $(check_PROGRAMS)
check_PROGRAMS = asm_input asm_input_insns asm_input_count
asm_input_SOURCES = asm_input.c check.h ../src/parser.c ../src/parser.h
asm_input_insns_SOURCES = asm_input_insns.c check.h ../src/parser.c ../src/parser.h
asm_input_count_SOURCES = asm_input_count.c check.h ../src/parser.c ../src/parser.h
